Fix scrollbar
Enact-DCO-1.0-Signed-off-by: YB Sung (yb.sung@lge.com)

--- a/Scrollable/Scrollable.module.less
+++ b/Scrollable/Scrollable.module.less
@@ -4,24 +4,16 @@
 	--scroll-padding-size: calc(var(--scroll-scrollbar-size) + var(--scroll-fadeout-size));
 
 	position: relative;
+	width: 100%;
+	height: 100%;
 	box-sizing: border-box;
 	padding: var(--scroll-padding-size);
 	overflow: hidden;
 	direction: lrt;
 
-	.innerVitualList {
-		width: 100%;
-		height: 100%;
-
-		.childWrapper {
-			width: 100%;
-			height: 100%;
-
-			.child {
-				box-sizing: border-box;
-				padding: var(--scroll-fadeout-size);
-			}
-		}
+	.child {
+		box-sizing: border-box;
+		padding: var(--scroll-fadeout-size);
 	}
 
 	.verticalScrollbar {
